--- a/front-end/src/index.css
+++ b/front-end/src/index.css
@@ -1,3 +1,21 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+html, body {
+    height: 100%;
+    width: 100%;
+    margin: 0;
+}
+body {
+    display: flex;
+    flex-direction: column;
+    background-color: #191e28
+}
+.container {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    margin: auto
+}
